// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filename-match-component rule invalid cases Component name differs only in case 1`] = `
[
  {
    "column": 7,
    "endColumn": 8,
    "endLine": 5,
    "line": 3,
    "message": "The file name "FooBar" must exactly match the component name "foobar" in PascalCase. No alternative naming is allowed.",
    "nodeType": "ExportDefaultDeclaration",
    "ruleId": "@custom-typescript-eslint/filename-match-component",
    "severity": 2,
  },
]
`;

exports[`filename-match-component rule invalid cases Filename does not match class component name 1`] = `
[
  {
    "column": 7,
    "endColumn": 8,
    "endLine": 8,
    "line": 4,
    "message": "The file name "Foo" must exactly match the component name "Bar" in PascalCase. No alternative naming is allowed.",
    "nodeType": "ExportDefaultDeclaration",
    "ruleId": "@custom-typescript-eslint/filename-match-component",
    "severity": 2,
  },
]
`;

exports[`filename-match-component rule invalid cases Filename does not match component name (function) 1`] = `
[
  {
    "column": 7,
    "endColumn": 8,
    "endLine": 5,
    "line": 3,
    "message": "The file name "Foo" must exactly match the component name "Bar" in PascalCase. No alternative naming is allowed.",
    "nodeType": "ExportDefaultDeclaration",
    "ruleId": "@custom-typescript-eslint/filename-match-component",
    "severity": 2,
  },
]
`;

exports[`filename-match-component rule invalid cases Filename does not match identifier name 1`] = `
[
  {
    "column": 7,
    "endColumn": 36,
    "endLine": 4,
    "line": 4,
    "message": "The file name "FooBar" must exactly match the component name "SomethingElse" in PascalCase. No alternative naming is allowed.",
    "nodeType": "ExportDefaultDeclaration",
    "ruleId": "@custom-typescript-eslint/filename-match-component",
    "severity": 2,
  },
]
`;

exports[`filename-match-component rule invalid cases Unsupported default export value 1`] = `
[
  {
    "column": 7,
    "endColumn": 24,
    "endLine": 3,
    "line": 3,
    "message": "The file name "Foo" must exactly match the component name "x" in PascalCase. No alternative naming is allowed.",
    "nodeType": "ExportDefaultDeclaration",
    "ruleId": "@custom-typescript-eslint/filename-match-component",
    "severity": 2,
  },
]
`;
